objects/IP_Revision__c.object
<CustomObject>
    <fields>
        <fullName>ruleschanging__c</fullName>
        <label>Rules which will Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Release</fullName>
                </value>
                <value>
                    <fullName>BE Rules Release</fullName>
                </value>
                <value>
                    <fullName>FE Rules Release</fullName>
                </value>
                <value>
                    <fullName>Chipbench Control Files</fullName>
                </value>
                <value>
                    <fullName>DEF</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>EDIF</fullName>
                </value>
                <value>
                    <fullName>GDS</fullName>
                </value>
                <value>
                    <fullName>Image Rule</fullName>
                </value>
                <value>
                    <fullName>IO_IMAGE_RULE</fullName>
                </value>
                <value>
                    <fullName>LEF</fullName>
                </value>
                <value>
                    <fullName>LRULE</fullName>
                </value>
                <value>
                    <fullName>MIC</fullName>
                </value>
                <value>
                    <fullName>MPR</fullName>
                </value>
                <value>
                    <fullName>NDR</fullName>
                </value>
                <value>
                    <fullName>Noise Abstract</fullName>
                </value>
                <value>
                    <fullName>Package PDL</fullName>
                </value>
                <value>
                    <fullName>PHYSCELL</fullName>
                </value>
                <value>
                    <fullName>ROMPERS</fullName>
                </value>
                <value>
                    <fullName>Srule</fullName>
                </value>
                <value>
                    <fullName>Synthesis</fullName>
                </value>
                <value>
                    <fullName>Technology PDL</fullName>
                </value>
                <value>
                    <fullName>Testbench</fullName>
                </value>
                <value>
                    <fullName>TPGTECH</fullName>
                </value>
                <value>
                    <fullName>VHDL/Verilog</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rulescouncilrequests__c</fullName>
        <inlineHelpText>(100 characters,
 no newlines)</inlineHelpText>
        <label>Related Rules Council Requests  Contents</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scopechange__c</fullName>
        <label>Scope Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sourcepdk__c</fullName>
        <label>Source PDK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>techdev__c</fullName>
        <label>M-techdev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>techkey__c</fullName>
        <label>Techkey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>technology__c</fullName>
        <formula>IP_Element__r.technology__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Design System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>techrel__c</fullName>
        <label>M-techrel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testsite__c</fullName>
        <label>TestSite Usage Only</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>testsitedate__c</fullName>
        <label>Development Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>testsitename__c</fullName>
        <label>Testsite Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Sandbar</fullName>
                </value>
                <value>
                    <fullName>Galapagos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>timepassed__c</fullName>
        <label>How much time has passed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>titleip__c</fullName>
        <label>M-titleip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>titlerevisionname__c</fullName>
        <label>M-titlerevisionname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>titletechnology__c</fullName>
        <label>M-titletechnology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tk_version__c</fullName>
        <label>TK Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_betachange__c</fullName>
        <label>M-tmp_betachange</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_devchange__c</fullName>
        <label>M-tmp_devchange</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_dkchange__c</fullName>
        <label>M-tmp_dkchange</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_gachange__c</fullName>
        <label>M-tmp_gachange</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_newbetadate__c</fullName>
        <label>M-tmp_newbetadate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_newdevdate__c</fullName>
        <label>M-tmp_newdevdate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_newdk__c</fullName>
        <label>M-tmp_newdk</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_newgadate__c</fullName>
        <label>M-tmp_newgadate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_newreldate__c</fullName>
        <label>M-tmp_newreldate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_oldbetadate__c</fullName>
        <label>M-tmp_oldbetadate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_olddevdate__c</fullName>
        <label>M-tmp_olddevdate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_olddk__c</fullName>
        <label>M-tmp_olddk</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_oldgadate__c</fullName>
        <label>M-tmp_oldgadate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_oldreldate__c</fullName>
        <label>M-tmp_oldreldate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_relchange__c</fullName>
        <label>M-tmp_relchange</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>todayseditors__c</fullName>
        <label>M-todayseditors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>valid__c</fullName>
        <label>Valid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IP Revision</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>IP Revision Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IP Revisions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>